--- a/Runtime/MK.Pool.asmdef
+++ b/Runtime/MK.Pool.asmdef
@@ -4,7 +4,8 @@
   "references": [
     "UniTask",
     "MK.AssetsManager",
-    "MK.Log"
+    "MK.Log",
+    "MK.DependencyInjection"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
