--- a/Runtime/MK.Pool.asmdef
+++ b/Runtime/MK.Pool.asmdef
@@ -5,7 +5,8 @@
     "UniTask",
     "MK.AssetsManager",
     "MK.Log",
-    "MK.DependencyInjection"
+    "MK.DependencyInjection",
+    "MK.Kernel"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
