--- a/Editor/MK.Pool.Editor.asmdef
+++ b/Editor/MK.Pool.Editor.asmdef
@@ -1,6 +1,9 @@
 {
   "name": "MK.Pool.Editor",
   "rootNamespace": "MK.Pool.Editor",
+  "references": [
+    "MK.Pool"
+  ],
   "includePlatforms": [
     "Editor"
   ]
